--- a/views/senate.pug
+++ b/views/senate.pug
@@ -6,7 +6,7 @@ html
     h1 United States Senate
     hr
     each val, index in count
-      span= index + ': #{val} / '
+      span= index + `: #{val} / `
     hr
     each val in names
       p= val
